No more makefiles for real

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
   - sudo apt-get -y install cm-super
 
 script:
-  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn install -Dmaven.javadoc.skip=true -B -V
