--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: java
 
-before_install:
-  - sudo apt-get update
-  - sudo apt-get -y install texlive-latex-base
-  - sudo apt-get -y install texlive-fonts-recommended
-  - sudo apt-get -y install texlive-latex-extra
-  - sudo apt-get -y install cm-super
+jdk:
+  - oraclejdk8
+
+#before_install:
+#  - sudo apt-get update
+#  - sudo apt-get -y install texlive-latex-base
+#  - sudo apt-get -y install texlive-fonts-recommended
+#  - sudo apt-get -y install texlive-latex-extra
+#  - sudo apt-get -y install cm-super
+
+install:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 script:
-  - mvn install -Dmaven.javadoc.skip=true -B -V
+  - mvn test
